--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,21 @@
-
-<html 
+<html>
+    <body>
+        i like dragon ball z
+        <p>im going to hack nogales</p>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Aboutme</title>
+    <title>Home</title>
   </head>
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>This is my test Home Page!</h1>
-    <img src="images/dz.jpg" height="250">
+    <a href="about.html"> About me</a>
+    <h1>This is my about me page</h1>
   </body>
+</html>
+  <image src="images/dz.jpg"></image>
+  <br>
+</body>
 </html>
