--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-
-<html 
+<html>
+    <body>
+        Hello world!
+        <p>today you win 100 dollars </p>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Home</title>
@@ -7,7 +11,11 @@
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="about.html"> About me</a>
     <h1>This is my test Home Page!</h1>
-    <img src="images/pad.jpg" height="250">
   </body>
+</html>
+  <image src="images/mansion.jpg"></image>
+  <br>
+</body>
 </html>
